@@ -3,7 +3,7 @@
 use strict;
 use warnings;
 use utf8;
-use Test::More tests => 132;
+use Test::More tests => 160;
 #use Test::More 'no_plan';
 use App::Sqitch;
 use Path::Class;
@@ -57,7 +57,8 @@ is_deeply [$CLASS->options], [qw(
 is $bundle->dest_dir, dir('bundle'),
     'Default dest_dir should be bundle/';
 
-is $bundle->dest_top_dir, dir('bundle'), 'Should have dest top dir';
+is $bundle->dest_top_dir($bundle->default_target), dir('bundle'),
+    'Should have dest top dir';
 
 ##############################################################################
 # Test configure().
@@ -92,11 +93,12 @@ isa_ok $bundle = App::Sqitch::Command->load({
 }), $CLASS, 'another bundle command';
 
 is $bundle->dest_dir, $dir, qq{dest_dir should be "$dir"};
-is $bundle->dest_top_dir, dir(qw(_build sql sql)),
+is $bundle->dest_top_dir($bundle->default_target), dir(qw(_build sql sql)),
     'Dest top dir should be _build/sql/sql/';
+my $target = $bundle->default_target;
 for my $sub (qw(deploy revert verify)) {
     my $attr = "dest_$sub\_dir";
-    is $bundle->$attr, $dir->subdir('sql', $sub),
+    is $bundle->$attr($target), $dir->subdir('sql', $sub),
         "Dest $sub dir should be _build/sql/sql/$sub";
 }
 
@@ -109,11 +111,12 @@ isa_ok $bundle = App::Sqitch::Command->load({
     command => 'bundle',
     config  => $config,
 }), $CLASS, 'engine bundle command';
+$target = $bundle->default_target;
 
 is $bundle->dest_dir, $dir, qq{dest_dir should again be "$dir"};
 for my $sub (qw(deploy revert verify)) {
     my $attr = "dest_$sub\_dir";
-    is $bundle->$attr, $dir->subdir('engine', $sub),
+    is $bundle->$attr($target), $dir->subdir('engine', $sub),
         "Dest $sub dir should be _build/sql/engine/$sub";
 }
 
@@ -238,9 +241,10 @@ is_deeply +MockOutput->get_info, [[__ 'Writing config']],
 
 ##############################################################################
 # Test bundle_plan().
-$dest = file $bundle->dest_top_dir, qw(sqitch.plan);
+$dest = file $bundle->dest_top_dir($bundle->default_target), qw(sqitch.plan);
 file_not_exists_ok $dest;
-ok $bundle->bundle_plan, 'Bundle the plan file';
+ok $bundle->bundle_plan($bundle->default_target),
+    'Bundle the default target plan file';
 file_exists_ok $dest;
 file_contents_identical $dest, file(qw(engine sqitch.plan));
 is_deeply +MockOutput->get_info, [[__ 'Writing plan']],
@@ -254,7 +258,8 @@ isa_ok $bundle = App::Sqitch::Command->load({
     args    => ['--from', 'widgets'],
 }), $CLASS, '--from bundle command';
 is $bundle->from, 'widgets', 'From should be "widgets"';
-ok $bundle->bundle_plan, 'Bundle the plan file with --from';
+ok $bundle->bundle_plan($bundle->default_target),
+    'Bundle the default target plan file with --from';
 my $plan = $bundle->default_target->plan;
 is_deeply +MockOutput->get_info, [[__x(
     'Writing plan from {from} to {to}',
@@ -277,7 +282,8 @@ isa_ok $bundle = App::Sqitch::Command->load({
     args    => ['--to', 'users'],
 }), $CLASS, '--to bundle command';
 is $bundle->to, 'users', 'To should be "users"';
-ok $bundle->bundle_plan, 'Bundle the plan file with --to';
+ok $bundle->bundle_plan($bundle->default_target),
+    'Bundle the default target plan file with --to';
 is_deeply +MockOutput->get_info, [[__x(
     'Writing plan from {from} to {to}',
     from => '@ROOT',
@@ -293,15 +299,15 @@ file_contents_is $dest,
 
 ##############################################################################
 # Test bundle_scripts().
-my @files = (
-    $bundle->dest_deploy_dir->file('users.sql'),
-    $bundle->dest_revert_dir->file('users.sql'),
-    $bundle->dest_deploy_dir->file('widgets.sql'),
-    $bundle->dest_revert_dir->file('widgets.sql'),
-    $bundle->dest_deploy_dir->file(qw(func add_user.sql)),
-    $bundle->dest_revert_dir->file(qw(func add_user.sql)),
+my @scripts = (
+    $bundle->dest_deploy_dir($target)->file('users.sql'),
+    $bundle->dest_revert_dir($target)->file('users.sql'),
+    $bundle->dest_deploy_dir($target)->file('widgets.sql'),
+    $bundle->dest_revert_dir($target)->file('widgets.sql'),
+    $bundle->dest_deploy_dir($target)->file(qw(func add_user.sql)),
+    $bundle->dest_revert_dir($target)->file(qw(func add_user.sql)),
 );
-file_not_exists_ok $_ for @files;
+file_not_exists_ok $_ for @scripts;
 ok $sqitch = App::Sqitch->new(
     options => {
         extension => 'sql',
@@ -313,8 +319,9 @@ isa_ok $bundle = App::Sqitch::Command->load({
     command => 'bundle',
     config  => $config,
 }), $CLASS, 'another bundle command';
-ok $bundle->bundle_scripts, 'Bundle scripts';
-file_exists_ok $_ for @files;
+ok $bundle->bundle_scripts($bundle->default_target),
+    'Bundle default target scripts';
+file_exists_ok $_ for @scripts;
 is_deeply +MockOutput->get_info, [
     [__ 'Writing scripts'],
     ['  + ', 'users @alpha'],
@@ -329,9 +336,9 @@ isa_ok $bundle = App::Sqitch::Command::bundle->new(
     dest_dir => $bundle->dest_dir,
     from     => 'widgets',
 ), $CLASS, 'bundle from "widgets"';
-ok $bundle->bundle_scripts, 'Bundle scripts';
-file_not_exists_ok $_ for @files[0,1];
-file_exists_ok $_ for @files[2,3];
+ok $bundle->bundle_scripts($bundle->default_target), 'Bundle scripts';
+file_not_exists_ok $_ for @scripts[0,1];
+file_exists_ok $_ for @scripts[2,3];
 is_deeply +MockOutput->get_info, [
     [__ 'Writing scripts'],
     ['  + ', 'widgets'],
@@ -345,9 +352,9 @@ isa_ok $bundle = App::Sqitch::Command::bundle->new(
     dest_dir => $bundle->dest_dir,
     to       => 'users',
 ), $CLASS, 'bundle to "users"';
-ok $bundle->bundle_scripts, 'Bundle scripts';
-file_exists_ok $_ for @files[0,1];
-file_not_exists_ok $_ for @files[2,3];
+ok $bundle->bundle_scripts($bundle->default_target), 'Bundle scripts';
+file_exists_ok $_ for @scripts[0,1];
+file_not_exists_ok $_ for @scripts[2,3];
 is_deeply +MockOutput->get_info, [
     [__ 'Writing scripts'],
     ['  + ', 'users @alpha'],
@@ -355,8 +362,9 @@ is_deeply +MockOutput->get_info, [
 
 # Should throw exceptions on unknonw changes.
 for my $key (qw(from to)) {
+    my $bundle = $CLASS->new( sqitch => $sqitch, $key => 'nonexistent' );
     throws_ok {
-        $CLASS->new( sqitch => $sqitch, $key => 'nonexistent' )->bundle_scripts
+        $bundle->bundle_scripts($bundle->default_target)
     } 'App::Sqitch::X', "Should die on nonexistent $key change";
     is $@->ident, 'bundle', qq{Nonexistent $key change ident should be "bundle"};
     is $@->message, __x(
@@ -369,19 +377,19 @@ for my $key (qw(from to)) {
 # Test execute().
 MockOutput->get_debug;
 remove_tree $dir->parent->stringify;
-@files = (
+@scripts = (
     file($dir, 'sqitch.conf'),
-    file($bundle->dest_top_dir, 'sqitch.plan'),
-    @files,
+    file($bundle->dest_top_dir($bundle->default_target), 'sqitch.plan'),
+    @scripts,
 );
-file_not_exists_ok $_ for @files;
+file_not_exists_ok $_ for @scripts;
 isa_ok $bundle = App::Sqitch::Command->load({
     sqitch  => $sqitch,
     command => 'bundle',
     config  => $config,
 }), $CLASS, 'another bundle command';
 ok $bundle->execute, 'Execute!';
-file_exists_ok $_ for @files;
+file_exists_ok $_ for @scripts;
 is_deeply +MockOutput->get_info, [
     [__x 'Bundling into {dir}', dir => $bundle->dest_dir ],
     [__ 'Writing config'],
@@ -392,3 +400,34 @@ is_deeply +MockOutput->get_info, [
     ['  + ', 'func/add_user'],
 ], 'Should have all notices';
 
+# Try a configuration with multiple plans.
+my $multidir = dir '_build';
+END { remove_tree $multidir->stringify }
+remove_tree $multidir->stringify;
+@scripts = (
+    $multidir->file('multiplan.conf'),
+    $multidir->file(qw(sql sqitch.plan)),
+    $multidir->file(qw(sql deploy roles.sql)),
+    $multidir->file(qw(sql deploy users.sql)),
+    $multidir->file(qw(sql verify users.sql)),
+    $multidir->file(qw(sql deploy widgets.sql)),
+
+    $multidir->file(qw(engine sqitch.plan)),
+    $multidir->file(qw(engine deploy users.sql)),
+    $multidir->file(qw(engine revert users.sql)),
+    $multidir->file(qw(engine deploy widgets.sql)),
+    $multidir->file(qw(engine revert widgets.sql)),
+    $multidir->file(qw(engine deploy func add_user.sql)),
+    $multidir->file(qw(engine revert func add_user.sql)),
+);
+file_not_exists_ok $_ for @scripts;
+
+local $ENV{SQITCH_CONFIG} = 'multiplan.conf';
+$sqitch = App::Sqitch->new;
+isa_ok $bundle = $CLASS->new(
+    sqitch  => $sqitch,
+    config  => $sqitch->config,
+    dest_dir => dir '_build',
+), $CLASS, 'multiplan bundle command';
+ok $bundle->execute, 'Execute multi-target bundle!';
+file_exists_ok $_ for @scripts;
