@@ -1,0 +1,11 @@
+[core]
+    engine = pg
+
+[engine "pg"]
+    top_dir   = engine
+
+[engine "sqlite"]
+    top_dir   = engine
+
+[engine "mysql"]
+    top_dir   = sql
